--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
       <p><span>Office : </span>Foster 310.05</p>
       <p><span>Phone : </span>(254) 710-4097</p>
       <p><span>Address : </span>One Bear Place #98005, Waco, TX 76798</p>
+      <p><a href="https://hankamer.baylor.edu/person/qin-weng" target="_blank">Work Website</a></p>
     </div>
   </section>
 	  <!-- Contact details -->
@@ -51,18 +52,19 @@
       <p><span>Keywords:&nbsp;project, control, team, collaboration, personality, network, identity, security, value, well-being </span></p>
 	  <h3 class="sectionContentTitle">Publication&nbsp;</h3>
 	<!-- HICSS 2026 -->
-      <p>Jie Ren, Tom Mattson, <u>Qin Weng</u> (Accepted). “Commenting from Afar: Psychological Distance and Empathy in Reddit
-	  Responses to School Shootings,” Proceedings of 59th Hawaii International Conference on Systems Sciences, Maui, HI, January 2026.</p>
+      <p>Min Ou, John Carlson, An Hu, <u>Qin Weng</u> (Accepted). “Channel Expansion Theory: A Comprehensive Meta-analysis, Literature Review, and Examination of Boundary Conditions,” Proceedings of 59th Hawaii International Conference on Systems Sciences, Maui, HI, January 2026.</p>
+	<!-- HICSS 2026 -->
+      <p>Jie Ren, Tom Mattson, <u>Qin Weng</u> (Accepted). “Commenting from Afar: Psychological Distance and Empathy in Reddit Responses to School Shootings,” Proceedings of 59th Hawaii International Conference on Systems Sciences, Maui, HI, January 2026.</p>
 	<!-- ICIS 2025 -->	
       <p>Min Ou, Hope Koch, <u>Qin Weng</u> (Accepted). “I’m Aware, Therefore I Act: Investigating the Dimensions and Behavioral Consequences of Workers’ Algorithm Awareness,” Proceedings of the 46th International Conference on Information Systems, Nashville, Tennessee, December 2025.</p>
 	<!-- ISJ 2025-->
-	  <p>Sebastian Schuetz, Gaurav Bansal, <u>Qin Weng</u>, Jason Thatcher, Paul B. Lowry (Accepted). "Heeding the messenger: The influence of sender characteristics on security message compliance intention," <strong>Information Systems Journal</strong>. <a target="_blank" href="https://papers.ssrn.com/sol3/papers.cfm?abstract_id=5379233">read</a></p>
+	  <p>Sebastian Schuetz, Gaurav Bansal, <u>Qin Weng</u>, Jason Thatcher, Paul B. Lowry (Accepted). "Heeding the Messenger: The Influence of Sender Characteristics on Security Message Compliance Intention," <strong>Information Systems Journal</strong>. <a target="_blank" href="https://papers.ssrn.com/sol3/papers.cfm?abstract_id=5379233">read</a></p>
 	<!-- MISQ 2025-->
 	  <p><u>Qin Weng</u>, Carolina Reis, Viswanath Venkatesh (Forthcoming). "Extending the IT Risk Control Framework: Incorporating the Role of Team Personality," <strong>MIS Quarterly</strong>. <a target="_blank" href="https://misq.umn.edu/extending-the-it-risk-control-framework-incorporating-the-role-of-team-personality.html">read</a></p>
 	<!-- AMCIS 2025 -->
 	  <p>Min Ou, <u>Qin Weng</u>, Hope Koch (2025). “A Field Study of Algorithmic Control in Knowledge Work,” Proceedings of the 31st Americas Conference in Information Systems, Montreal, Canada, August: 2101.&nbsp;&nbsp;<a target="_blank" href="https://aisel.aisnet.org/amcis2025/sig_cnow/sig_cnow/9/">read</a></p>
 	<!-- DATA BASE 2025 -->
-	  <p><u>Qin Weng</u>, Jie Ren, Tom Mattson, Xuefei (Nancy) Deng, K. D. Joshi (2025). "Rewriting the margins: Can artificial intelligence agents reshape the power dynamics in social media?" <strong>The DATA BASE for Advances in Information Systems</strong> 56(3), 7-12. <a target="_blank" href="https://doi.org/10.1145/3757308.3757310">read</a></p>
+	  <p><u>Qin Weng</u>, Jie Ren, Tom Mattson, Xuefei (Nancy) Deng, K. D. Joshi (2025). "Rewriting the Margins: Can Artificial Intelligence Agents Reshape the Power Dynamics in Social Media?" <strong>The DATA BASE for Advances in Information Systems</strong> 56(3), 7-12. <a target="_blank" href="https://doi.org/10.1145/3757308.3757310">read</a></p>
 	<!-- SIGMIS 2025 -->
 	  <p>Min Ou, Hope Koch, <u>Qin Weng</u> (2025). “Algorithmic Oversight of Knowledge Workers: A Research Agenda on Technology, Control, and Psychological Contracts,” Proceedings of the 2025 Computers and People Research Conference, Waco, TX, May: 1-7. <a target="_blank" href="https://dl.acm.org/doi/pdf/10.1145/3716489.3728454">read</a></p>
 	<!-- EJIS 2025 -->
