--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 	<!-- ICIS 2025 -->	
       <p>Min Ou, Hope Koch, <u>Qin Weng</u> (Accepted). “I’m Aware, Therefore I Act: Investigating the Dimensions and Behavioral Consequences of Workers’ Algorithm Awareness,” Proceedings of the 46th International Conference on Information Systems, Nashville, Tennessee, December 2025.</p>
 	<!-- ISJ 2025-->
-	  <p>Sebastian Schuetz, Gaurav Bansal, <u>Qin Weng</u>, Jason Thatcher, Paul B. Lowry (Accepted). "Heeding the Messenger: The Influence of Sender Characteristics on Security Message Compliance Intention," <strong>Information Systems Journal</strong>. <a target="_blank" href="https://papers.ssrn.com/sol3/papers.cfm?abstract_id=5379233">read</a></p>
+	  <p>Sebastian Schuetz, Gaurav Bansal, <u>Qin Weng</u>, Paul B. Lowry, Jason B. Thatcher (2025). "Heeding the Messenger: The Influence of Sender Characteristics on Security Message Compliance Intention," <strong>Information Systems Journal</strong>. <a target="_blank" href="https://doi.org/10.1111/isj.70013">read</a></p>
 	<!-- MISQ 2025-->
 	  <p><u>Qin Weng</u>, Carolina Reis, Viswanath Venkatesh (Forthcoming). "Extending the IT Risk Control Framework: Incorporating the Role of Team Personality," <strong>MIS Quarterly</strong>. <a target="_blank" href="https://misq.umn.edu/extending-the-it-risk-control-framework-incorporating-the-role-of-team-personality.html">read</a></p>
 	<!-- AMCIS 2025 -->
@@ -93,7 +93,7 @@
       <p><span>Viswanath Venkatesh, <u>Qin Weng</u>, Arun Rai, Likoebe M. Maruping (2023). “Guidelines for the Development of Three-Level Models: Bridging Levels of Analysis and Integrating Contextual Influences in IS Research,” <strong>Journal of the Association for Information Systems</strong> 24(1): 65-106. </span><a target="_blank" href="https://aisel.aisnet.org/jais/vol24/iss1/7/">read</a>
 	<!-- AMCIS 2022 -->
       <p><span><u>Qin Weng</u>, Wendy Wang, Amber Young (2022). “How Is IT Identity Claimed and Manifested?” Proceedings of 28th Americas Conference on Information Systems, Minneapolis, MN, August: 1699. (Selected as a Top Paper for AMCIS 2022) <a target="_blank" href="https://aisel.aisnet.org/amcis2022/conf_theme/conf_theme/6/">read</a></span></p>
-    <!-- AMCIS 2019 -->
+  <!-- AMCIS 2019 -->
       <p><span><u>Qin Weng</u>, Wendy Wang, Jignya Patel (2019). “Exploring the Formation of IT Identity: A Technology-Value Fit Model,” Proceedings of 25th Americas Conference on Information Systems, Cancun, Mexico, August: 13. <a target="_blank" href="https://aisel.aisnet.org/amcis2019/adv_info_systems_research/adv_info_systems_research/13/">read</a></span></p>
 	<!-- Dissertation 2018 -->
       <p><span><u>Qin Weng</u> (2018). “Why Do Project Participants Work Together? An Investigation of the Antecedents of Collaboration Tie Strength in Cyberinfrastructure Projects,” Doctoral Dissertation, University of Pittsburgh. (Chaired by Dr. Laurie J. Kirsch)&nbsp;</span></p>
@@ -114,26 +114,31 @@
     <hr class="sectionTitleRule2">
     <!-- First Title & company details  -->
     <article class="section2Content">
+    <!-- CHA1087-->
+	  <h2 class="sectionContentTitle">CHA 1087: Chapel - Faith and Business (Undergraduate)&nbsp;</h2>
+      <h3 class="sectionContentSubTitle">Baylor University / Fall 2025</h3>
+      <p class="sectionContent"> A chapel experience where students explore the scriptures and discuss how faith can impact a calling to and career in business. Each week of the semester is focused on a theme addressed by testimonies, presentations, videos, and thoughtful discussion.</p>
+    <!-- MIS6235 -->
 	  <h2 class="sectionContentTitle">MIS 6325: Advanced Quantitative Methods (Doctoral Seminar)&nbsp;</h2>
       <h3 class="sectionContentSubTitle">Baylor University / Fall 2025</h3>
-      <p class="sectionContent"> Designed to develop quantitative skills for conducting rigorous data driven research. Topics include Econometrics, Propensity Score Matching, Instrumental Variable, Simultaneous Equations Models, Measurement Error, 2SLS, 3SLS, Difference-in-Difference, Multi-Level and Longitudinal Modeling, Moderator and Mediator.</p>
-      <h2 class="sectionContentTitle">QBA 3305: Introduction to Business Analytics (Undergraduate)&nbsp;</h2>
+      <p class="sectionContent"> Designed to develop quantitative skills for conducting rigorous data driven research. Topics include Econometrics, Propensity Score Matching, Instrumental Variable, Simultaneous Equations Models, Measurement Error, 2SLS, 3SLS, Difference-in-Difference, Multi-Level and Longitudinal Modeling, Moderator and Mediator, and Qualitative Comparative Analysis.</p>
+    <h2 class="sectionContentTitle">QBA 3305: Introduction to Business Analytics (Undergraduate)&nbsp;</h2>
       <h3 class="sectionContentSubTitle">Baylor University / Spring 2024~2025</h3>
       <p class="sectionContent"> Designed to aid in understanding what has happened in the past in a firm (descriptive analytics), using past data to predict what is going to happen in the future (predictive analytics), and helping to determine the best course of action to take (prescriptive analytics). Explores how to combine statistical modeling and computer techniques (e.g., R, RStudio) to help make principled decisions in the context of business.</p>
-      <h2 class="sectionContentTitle">ISYS 5103: Data Analytics Fundamentals (Graduate)</h2>
+    <h2 class="sectionContentTitle">ISYS 5103: Data Analytics Fundamentals (Graduate)</h2>
       <h3 class="sectionContentSubTitle">University of Arkansas / Fall 2018~2023</h3>
       <p class="sectionContent">Fundamental knowledge and skills in several major areas of business data analytics. Emphasis on the management and use of data in modern organizations, intermediate &amp; advanced spreadsheet topics; relational databases &amp; SQL; and programming (such as Python).&nbsp;</p>
 	  <h2 class="sectionContentTitle">ISYS 4193: Business Analytics and Visualization (Undergraduate)</h2>
-	  <h3 class="sectionContentSubTitle">University of Arkansas / Fall 2018</h3>
+	    <h3 class="sectionContentSubTitle">University of Arkansas / Fall 2018</h3>
       <p class="sectionContent"> Introductory study of business analytics, visualization, and systems to provide analytics-based information derived from data within and/or external to the organization. Business analytics used to support management in the decision making. Application of tools in business analytics, problem solving, visualization, and decision making.&nbsp;</p>
 	  <h2 class="sectionContentTitle">CMP 283: Database Management Systems (Undergraduate)&nbsp;</h2>
       <h3 class="sectionContentSubTitle">Chatham University</h3>
       <p class="sectionContent">Database Concepts, ER diagrams, normalization, SQL, MS Access.&nbsp;</p>
 	  <h2 class="sectionContentTitle">BUSBIS 1060: Introduction to Management Information Systems (Undergraduate)</h2>
-	  <h3 class="sectionContentSubTitle">University of Pittsburgh</h3>
+	    <h3 class="sectionContentSubTitle">University of Pittsburgh</h3>
       <p class="sectionContent">Fundamental MIS topics, including database, decision support, business intelligence, e-commerce, and crowdsourcing. Excel, Access, RapidMiner (data analytics), and Google sites.&nbsp;</p>
 	  <h2 class="sectionContentTitle">INFO 258: Objected-Oriented Programming (Undergraduate)</h2>
-	  <h3 class="sectionContentSubTitle">Virginia Commonwealth University</h3>
+	    <h3 class="sectionContentSubTitle">Virginia Commonwealth University</h3>
       <p class="sectionContent">Objected-oriented programming with Visual Basic, and relevant techniques including VB form design, VB programming, ADO, and ActiveX.</p>
     </article>
     <!-- Replicate the above Div block to add more title and company details --> 
