--- a/index.html
+++ b/index.html
@@ -52,11 +52,11 @@
       <p><span>Keywords:&nbsp;project, control, team, collaboration, personality, network, identity, security, value, well-being </span></p>
 	  <h3 class="sectionContentTitle">Publication&nbsp;</h3>
 	<!-- HICSS 2026 -->
-      <p>Min Ou, John Carlson, An Hu, <u>Qin Weng</u> (Accepted). “Channel Expansion Theory: A Comprehensive Meta-analysis, Literature Review, and Examination of Boundary Conditions,” Proceedings of 59th Hawaii International Conference on Systems Sciences, Maui, HI, January 2026.</p>
+      <p>Min Ou, John Carlson, An Hu, <u>Qin Weng</u> (2026). “Channel Expansion Theory: A Comprehensive Meta-analysis, Literature Review, and Examination of Boundary Conditions,” Proceedings of 59th Hawaii International Conference on Systems Sciences, Maui, HI, January 2026.</p>
 	<!-- HICSS 2026 -->
-      <p>Jie Ren, Tom Mattson, <u>Qin Weng</u> (Accepted). “Commenting from Afar: Psychological Distance and Empathy in Reddit Responses to School Shootings,” Proceedings of 59th Hawaii International Conference on Systems Sciences, Maui, HI, January 2026.</p>
+      <p>Jie Ren, Tom Mattson, <u>Qin Weng</u> (2026). “Commenting from Afar: Psychological Distance and Empathy in Reddit Responses to School Shootings,” Proceedings of 59th Hawaii International Conference on Systems Sciences, Maui, HI, January 2026. (Best Paper Nominee for HICSS 2026)</p>
 	<!-- ICIS 2025 -->	
-      <p>Min Ou, Hope Koch, <u>Qin Weng</u> (Accepted). “I’m Aware, Therefore I Act: Investigating the Dimensions and Behavioral Consequences of Workers’ Algorithm Awareness,” Proceedings of the 46th International Conference on Information Systems, Nashville, Tennessee, December 2025.</p>
+      <p>Min Ou, Hope Koch, <u>Qin Weng</u> (2025). “I’m Aware, Therefore I Act: Investigating the Dimensions and Behavioral Consequences of Workers’ Algorithm Awareness,” Proceedings of the 46th International Conference on Information Systems, Nashville, Tennessee, December 2025.</p>
 	<!-- ISJ 2025-->
 	  <p>Sebastian Schuetz, Gaurav Bansal, <u>Qin Weng</u>, Paul B. Lowry, Jason B. Thatcher (2025). "Heeding the Messenger: The Influence of Sender Characteristics on Security Message Compliance Intention," <strong>Information Systems Journal</strong>. <a target="_blank" href="https://doi.org/10.1111/isj.70013">read</a></p>
 	<!-- MISQ 2025-->
@@ -123,7 +123,7 @@
       <h3 class="sectionContentSubTitle">Baylor University / Fall 2025</h3>
       <p class="sectionContent"> Designed to develop quantitative skills for conducting rigorous data driven research. Topics include Econometrics, Propensity Score Matching, Instrumental Variable, Simultaneous Equations Models, Measurement Error, 2SLS, 3SLS, Difference-in-Difference, Multi-Level and Longitudinal Modeling, Moderator and Mediator, and Qualitative Comparative Analysis.</p>
     <h2 class="sectionContentTitle">QBA 3305: Introduction to Business Analytics (Undergraduate)&nbsp;</h2>
-      <h3 class="sectionContentSubTitle">Baylor University / Spring 2024~2025</h3>
+      <h3 class="sectionContentSubTitle">Baylor University / Spring 2024~2026</h3>
       <p class="sectionContent"> Designed to aid in understanding what has happened in the past in a firm (descriptive analytics), using past data to predict what is going to happen in the future (predictive analytics), and helping to determine the best course of action to take (prescriptive analytics). Explores how to combine statistical modeling and computer techniques (e.g., R, RStudio) to help make principled decisions in the context of business.</p>
     <h2 class="sectionContentTitle">ISYS 5103: Data Analytics Fundamentals (Graduate)</h2>
       <h3 class="sectionContentSubTitle">University of Arkansas / Fall 2018~2023</h3>
@@ -150,8 +150,9 @@
     <!-- First Title & company details  -->
     <article class="section2Content">
       <h2 class="sectionContentTitle">Conference&nbsp;</h2>
-      <p class="sectionContent">Mini-track Chair, Social Computing and Well-being, in Social Computing Track, AMCIS, 2025&nbsp;&nbsp;</p>
-      <p class="sectionContent">Mini-track Chair, Bright and Dark Side of Social Media in the Marginalized Contexts, in Information Technology, Social Justice, and Marginalized Contexts Track, HICSS, 2024–2025&nbsp;</p>
+      <p class="sectionContent">Mini-track Chair, Social Computing and Well-being, in Social Computing Track, AMCIS, 2025–2026&nbsp;&nbsp;</p>
+      <p class="sectionContent">Mini-track Chair, Bright and Dark Side of Social Media in the Marginalized Contexts, in Information Technology, Social Justice, and Marginalized Contexts Track, HICSS, 2024–2026&nbsp;</p>
+      <p class="sectionContent">Associate Editor, General Track, ECIS, 2026 &nbsp;</p>
       <p class="sectionContent">Associate Editor, Digital Technologies and the Future of Work Track, ICIS, 2024-2025 &nbsp;</p>
 <p class="sectionContent">Mini-track Chair, Digital Frontiers of Social Computing for Social Good, in Social Computing Track, AMCIS, 2024&nbsp;</p>
       <p class="sectionContent">Mini-track Chair, The Dark Side of Social Media, in Social Computing Track, AMCIS, 2018–2023&nbsp;</p>
